docs-site/versioned_docs/version-3.3.0/api/index.md
# ng-qubee

## Enumerations

- [DriverEnum](enumerations/DriverEnum.md)
- [FilterOperatorEnum](enumerations/FilterOperatorEnum.md)
- [PaginationModeEnum](enumerations/PaginationModeEnum.md)
- [SortEnum](enumerations/SortEnum.md)

## Classes

- [InvalidFilterOperatorValueError](classes/InvalidFilterOperatorValueError.md)
- [InvalidLimitError](classes/InvalidLimitError.md)
- [InvalidPageNumberError](classes/InvalidPageNumberError.md)
- [InvalidResourceNameError](classes/InvalidResourceNameError.md)
- [JsonApiRequestStrategy](classes/JsonApiRequestStrategy.md)
- [JsonApiResponseStrategy](classes/JsonApiResponseStrategy.md)
- [KeyNotFoundError](classes/KeyNotFoundError.md)
- [LaravelRequestStrategy](classes/LaravelRequestStrategy.md)
- [LaravelResponseStrategy](classes/LaravelResponseStrategy.md)
- [NestjsRequestStrategy](classes/NestjsRequestStrategy.md)
- [NestjsResponseStrategy](classes/NestjsResponseStrategy.md)
- [NgQubeeModule](classes/NgQubeeModule.md)
- [NgQubeeService](classes/NgQubeeService.md)
- [PaginatedCollection](classes/PaginatedCollection.md)
- [PaginationNotSyncedError](classes/PaginationNotSyncedError.md)
- [PaginationService](classes/PaginationService.md)
- [PostgrestRequestStrategy](classes/PostgrestRequestStrategy.md)
- [PostgrestResponseStrategy](classes/PostgrestResponseStrategy.md)
- [SpatieRequestStrategy](classes/SpatieRequestStrategy.md)
- [SpatieResponseStrategy](classes/SpatieResponseStrategy.md)
- [UnselectableModelError](classes/UnselectableModelError.md)
- [UnsupportedFieldSelectionError](classes/UnsupportedFieldSelectionError.md)
- [UnsupportedFilterError](classes/UnsupportedFilterError.md)
- [UnsupportedFilterOperatorError](classes/UnsupportedFilterOperatorError.md)
- [UnsupportedIncludesError](classes/UnsupportedIncludesError.md)
- [UnsupportedSearchError](classes/UnsupportedSearchError.md)
- [UnsupportedSelectError](classes/UnsupportedSelectError.md)
- [UnsupportedSortError](classes/UnsupportedSortError.md)

## Interfaces

- [IConfig](interfaces/IConfig.md)
- [IFields](interfaces/IFields.md)
- [IFilters](interfaces/IFilters.md)
- [INestState](interfaces/INestState.md)
- [IOperatorFilter](interfaces/IOperatorFilter.md)
- [IPage](interfaces/IPage.md)
- [IPaginatedObject](interfaces/IPaginatedObject.md)
- [IPaginationConfig](interfaces/IPaginationConfig.md)
- [IQueryBuilderConfig](interfaces/IQueryBuilderConfig.md)
- [IQueryBuilderState](interfaces/IQueryBuilderState.md)
- [IRequestStrategy](interfaces/IRequestStrategy.md)
- [IResponseStrategy](interfaces/IResponseStrategy.md)
- [ISort](interfaces/ISort.md)

## Type Aliases

- [HeaderBag](type-aliases/HeaderBag.md)

## Variables

- [NG\_QUBEE\_DRIVER](variables/NG_QUBEE_DRIVER.md)
- [NG\_QUBEE\_REQUEST\_OPTIONS](variables/NG_QUBEE_REQUEST_OPTIONS.md)
- [NG\_QUBEE\_REQUEST\_STRATEGY](variables/NG_QUBEE_REQUEST_STRATEGY.md)
- [NG\_QUBEE\_RESPONSE\_OPTIONS](variables/NG_QUBEE_RESPONSE_OPTIONS.md)
- [NG\_QUBEE\_RESPONSE\_STRATEGY](variables/NG_QUBEE_RESPONSE_STRATEGY.md)

## Functions

- [buildNgQubeeProviders](functions/buildNgQubeeProviders.md)
- [provideNgQubee](functions/provideNgQubee.md)
- [provideNgQubeeInstance](functions/provideNgQubeeInstance.md)
- [readHeader](functions/readHeader.md)
