docs-site/versioned_docs/version-3.8.0/api/index.md
## Enumerations

- [DriverEnum](enumerations/DriverEnum.md)
- [FilterOperatorEnum](enumerations/FilterOperatorEnum.md)
- [PaginationModeEnum](enumerations/PaginationModeEnum.md)
- [SortEnum](enumerations/SortEnum.md)

## Classes

- [ApiPlatformRequestStrategy](classes/ApiPlatformRequestStrategy.md)
- [ApiPlatformResponseOptions](classes/ApiPlatformResponseOptions.md)
- [ApiPlatformResponseStrategy](classes/ApiPlatformResponseStrategy.md)
- [DirectusRequestStrategy](classes/DirectusRequestStrategy.md)
- [DirectusResponseOptions](classes/DirectusResponseOptions.md)
- [DirectusResponseStrategy](classes/DirectusResponseStrategy.md)
- [DrfRequestStrategy](classes/DrfRequestStrategy.md)
- [DrfResponseOptions](classes/DrfResponseOptions.md)
- [DrfResponseStrategy](classes/DrfResponseStrategy.md)
- [FeathersRequestStrategy](classes/FeathersRequestStrategy.md)
- [FeathersResponseOptions](classes/FeathersResponseOptions.md)
- [FeathersResponseStrategy](classes/FeathersResponseStrategy.md)
- [InvalidFilterOperatorValueError](classes/InvalidFilterOperatorValueError.md)
- [InvalidLimitError](classes/InvalidLimitError.md)
- [InvalidPageNumberError](classes/InvalidPageNumberError.md)
- [InvalidResourceNameError](classes/InvalidResourceNameError.md)
- [JsonApiRequestStrategy](classes/JsonApiRequestStrategy.md)
- [JsonApiResponseOptions](classes/JsonApiResponseOptions.md)
- [JsonApiResponseStrategy](classes/JsonApiResponseStrategy.md)
- [JsonServerRequestStrategy](classes/JsonServerRequestStrategy.md)
- [JsonServerResponseOptions](classes/JsonServerResponseOptions.md)
- [JsonServerResponseStrategy](classes/JsonServerResponseStrategy.md)
- [KeyNotFoundError](classes/KeyNotFoundError.md)
- [LaravelRequestStrategy](classes/LaravelRequestStrategy.md)
- [LaravelResponseStrategy](classes/LaravelResponseStrategy.md)
- [NestjsRequestStrategy](classes/NestjsRequestStrategy.md)
- [NestjsResponseOptions](classes/NestjsResponseOptions.md)
- [NestjsResponseStrategy](classes/NestjsResponseStrategy.md)
- [NestjsxCrudRequestStrategy](classes/NestjsxCrudRequestStrategy.md)
- [NestjsxCrudResponseOptions](classes/NestjsxCrudResponseOptions.md)
- [NestjsxCrudResponseStrategy](classes/NestjsxCrudResponseStrategy.md)
- [NgQubeeModule](classes/NgQubeeModule.md)
- [NgQubeeService](classes/NgQubeeService.md)
- [OdataRequestStrategy](classes/OdataRequestStrategy.md)
- [OdataResponseOptions](classes/OdataResponseOptions.md)
- [OdataResponseStrategy](classes/OdataResponseStrategy.md)
- [PaginatedCollection](classes/PaginatedCollection.md)
- [PaginationNotSyncedError](classes/PaginationNotSyncedError.md)
- [PaginationService](classes/PaginationService.md)
- [PayloadRequestStrategy](classes/PayloadRequestStrategy.md)
- [PayloadResponseOptions](classes/PayloadResponseOptions.md)
- [PayloadResponseStrategy](classes/PayloadResponseStrategy.md)
- [PocketbaseRequestStrategy](classes/PocketbaseRequestStrategy.md)
- [PocketbaseResponseOptions](classes/PocketbaseResponseOptions.md)
- [PocketbaseResponseStrategy](classes/PocketbaseResponseStrategy.md)
- [PostgrestRequestStrategy](classes/PostgrestRequestStrategy.md)
- [PostgrestResponseStrategy](classes/PostgrestResponseStrategy.md)
- [QueryBuilderOptions](classes/QueryBuilderOptions.md)
- [ResponseOptions](classes/ResponseOptions.md)
- [SieveRequestStrategy](classes/SieveRequestStrategy.md)
- [SieveResponseOptions](classes/SieveResponseOptions.md)
- [SieveResponseStrategy](classes/SieveResponseStrategy.md)
- [SpatieRequestStrategy](classes/SpatieRequestStrategy.md)
- [SpatieResponseStrategy](classes/SpatieResponseStrategy.md)
- [SpringRequestStrategy](classes/SpringRequestStrategy.md)
- [SpringResponseOptions](classes/SpringResponseOptions.md)
- [SpringResponseStrategy](classes/SpringResponseStrategy.md)
- [StrapiRequestStrategy](classes/StrapiRequestStrategy.md)
- [StrapiResponseOptions](classes/StrapiResponseOptions.md)
- [StrapiResponseStrategy](classes/StrapiResponseStrategy.md)
- [UnselectableModelError](classes/UnselectableModelError.md)
- [UnsupportedEmbeddedError](classes/UnsupportedEmbeddedError.md)
- [UnsupportedFieldSelectionError](classes/UnsupportedFieldSelectionError.md)
- [UnsupportedFilterError](classes/UnsupportedFilterError.md)
- [UnsupportedFilterOperatorError](classes/UnsupportedFilterOperatorError.md)
- [UnsupportedIncludesError](classes/UnsupportedIncludesError.md)
- [UnsupportedSearchError](classes/UnsupportedSearchError.md)
- [UnsupportedSelectError](classes/UnsupportedSelectError.md)
- [UnsupportedSortError](classes/UnsupportedSortError.md)
- [WordpressRequestStrategy](classes/WordpressRequestStrategy.md)
- [WordpressResponseStrategy](classes/WordpressResponseStrategy.md)

## Interfaces

- [IConfig](interfaces/IConfig.md)
- [IFields](interfaces/IFields.md)
- [IFilters](interfaces/IFilters.md)
- [INestState](interfaces/INestState.md)
- [IOperatorFilter](interfaces/IOperatorFilter.md)
- [IPage](interfaces/IPage.md)
- [IPaginatedObject](interfaces/IPaginatedObject.md)
- [IPaginationConfig](interfaces/IPaginationConfig.md)
- [IQueryBuilderConfig](interfaces/IQueryBuilderConfig.md)
- [IQueryBuilderState](interfaces/IQueryBuilderState.md)
- [IRequestStrategy](interfaces/IRequestStrategy.md)
- [IResponseStrategy](interfaces/IResponseStrategy.md)
- [ISort](interfaces/ISort.md)

## Type Aliases

- [Embedded](type-aliases/Embedded.md)
- [HeaderBag](type-aliases/HeaderBag.md)

## Variables

- [NG\_QUBEE\_DRIVER](variables/NG_QUBEE_DRIVER.md)
- [NG\_QUBEE\_REQUEST\_OPTIONS](variables/NG_QUBEE_REQUEST_OPTIONS.md)
- [NG\_QUBEE\_REQUEST\_STRATEGY](variables/NG_QUBEE_REQUEST_STRATEGY.md)
- [NG\_QUBEE\_RESPONSE\_OPTIONS](variables/NG_QUBEE_RESPONSE_OPTIONS.md)
- [NG\_QUBEE\_RESPONSE\_STRATEGY](variables/NG_QUBEE_RESPONSE_STRATEGY.md)

## Functions

- [buildNgQubeeProviders](functions/buildNgQubeeProviders.md)
- [provideNgQubee](functions/provideNgQubee.md)
- [provideNgQubeeInstance](functions/provideNgQubeeInstance.md)
- [readHeader](functions/readHeader.md)
